# cpplang

./: .gitignore  CMakeLists.txt  example.txt
include/: Context.hpp  Lexer.hpp  Position.hpp  States.hpp  Tokens.hpp
include/Lexer/: Context.hpp  Lexer.hpp  Modes.hpp
include/States/: Start.hpp  States.hpp
include/utilities/: make_array.hpp
src/: main.cpp
tests/: lexer_fixtures.cpp  lexer_fixtures.hpp  test_context.cpp  test_lexer.cpp  test_mode.cpp  test_operators.cpp  test_start.cpp  test_state.cpp
